--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@typescript-eslint/parser": "^5.24.0",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
@@ -36,8 +37,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^12.4.1",
+    "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "sass": "^1.51.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.5",
