--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloud-app-admin",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -21,12 +21,16 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-vue": "^8.7.1",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "mockjs": "^1.1.0",
     "pinia": "^2.0.14",
     "qs": "^6.10.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/mockjs": "^1.0.6",
     "@typescript-eslint/parser": "^5.24.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
@@ -39,12 +43,15 @@
     "lint-staged": "^12.4.1",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
+    "rollup": "^2.73.0",
+    "rollup-plugin-visualizer": "^5.6.0",
     "sass": "^1.51.0",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.9",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.34.7"
   },
   "config": {
