--- a/package.json
+++ b/package.json
@@ -15,18 +15,22 @@
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "axios": "^0.27.2",
     "element-plus": "^2.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-vue": "^8.7.1",
+    "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.14",
     "qs": "^6.10.3",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vxe-table": "^4.2.3",
+    "xe-utils": "^3.5.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
@@ -35,6 +39,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "commitizen": "^4.2.4",
+    "consola": "^2.15.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
@@ -52,6 +57,7 @@
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.9",
     "vite-plugin-mock": "^2.9.6",
+    "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^0.34.7"
   },
   "config": {
