--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "qs": "^6.10.3",
     "vue": "^3.2.25",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.182",
     "@types/mockjs": "^1.0.6",
+    "@types/nprogress": "^0.2.0",
     "@typescript-eslint/parser": "^5.24.0",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
