fix: 修复自动引入组件类型提示错误的问题

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,8 @@
     "vite/**/*.ts",
     "mock/**/*.ts",
     "types/**/*.d.ts",
-    "types/**/*.ts"
+    "types/**/*.ts",
+    "components.d.ts",
+    "auto-imports.d.ts",
   ]
 }
