--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
@@ -35,6 +36,7 @@
     "xe-utils": "^3.5.4"
   },
   "devDependencies": {
+    "@iconify-json/mdi": "^1.1.15",
     "@types/lodash": "^4.14.182",
     "@types/mockjs": "^1.0.6",
     "@types/nprogress": "^0.2.0",
@@ -57,6 +59,7 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
+    "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.9",
     "vite-plugin-mock": "^2.9.6",
