--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "@vueuse/core": "^8.5.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.2",
     "element-plus": "^2.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
