feat: 添加vite-plugin-html插件

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,8 @@
+# 接口请求路径
 VITE_API_URL='/'
+# mock数据开关
 VITE_MOCK_ENABLE=false
+# vite开发服务器端口
 VITE_PORT=3000
+# 全局标题
+VITE_GLOB_APP_TITLE = 喵喵App管理系统
