--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.9",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0",
     "vue-tsc": "^0.34.7"
