--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vueuse/core": "^8.5.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
+    "echarts": "^5.3.2",
     "element-plus": "^2.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
@@ -37,6 +38,7 @@
     "reset-css": "^5.0.1",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.25",
+    "vue-echarts": "^6.0.3",
     "vue-router": "^4.0.13",
     "vxe-table": "^4.2.3",
     "xe-utils": "^3.5.4",
