--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@vee-validate/rules": "^4.5.11",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "@vueuse/core": "^8.5.0",
+    "@wangeditor/editor": "^5.1.0",
+    "@wangeditor/editor-for-vue": "^5.1.11",
+    "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "echarts": "^5.3.2",
