feat: i18n国际化配置增加

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vee-validate": "^4.5.11",
     "vue": "^3.2.37",
     "vue-echarts": "^6.0.3",
+    "vue-i18n": "^9.1.10",
     "vue-router": "^4.0.15",
     "vxe-table": "^4.2.3",
     "xe-utils": "^3.5.4",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.19",
+    "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@types/lodash": "^4.14.182",
     "@types/mockjs": "^1.0.6",
     "@types/nprogress": "^0.2.0",
