feat: 添加线上mock地址，修改打包路径

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # 接口请求路径
-VITE_API_URL='/'
+VITE_API_URL='https://mock.mengxuegu.com/mock/62baa319c99b3c42abbc2636/cloud'
 # mock数据开关
 VITE_MOCK_ENABLE=false
 # vite开发服务器端口
