fix: 锁定vue-router版本，解决打包报错问题

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "vue": "^3.2.37",
     "vue-echarts": "^6.1.0",
     "vue-i18n": "^9.1.10",
-    "vue-router": "^4.0.16",
+    "vue-router": "~4.0.16",
     "vxe-table": "^4.2.3",
     "xe-utils": "^3.5.4",
     "yup": "^0.32.11"
