--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
     "@types/tailwindcss": "^3.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@vee-validate/i18n": "^4.5.11",
     "@vee-validate/rules": "^4.5.11",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
@@ -29,10 +29,10 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "echarts": "^5.3.3",
-    "element-plus": "^2.2.6",
+    "element-plus": "^2.2.8",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.1.1",
+    "eslint-plugin-vue": "^9.2.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
@@ -45,7 +45,7 @@
     "vue": "^3.2.37",
     "vue-echarts": "^6.1.0",
     "vue-i18n": "^9.1.10",
-    "vue-router": "~4.0.16",
+    "vue-router": "^4.1.1",
     "vxe-table": "^4.2.3",
     "xe-utils": "^3.5.4",
     "yup": "^0.32.11"
@@ -56,13 +56,13 @@
     "@types/lodash": "^4.14.182",
     "@types/mockjs": "^1.0.6",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/parser": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.5",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "commitizen": "^4.2.4",
     "consola": "^2.15.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
@@ -76,7 +76,7 @@
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.9.2",
     "unplugin-icons": "^0.14.7",
-    "unplugin-vue-components": "^0.20.1",
+    "unplugin-vue-components": "^0.21.0",
     "vite": "^2.9.13",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
