--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@vee-validate/i18n": "^4.5.11",
     "@vee-validate/rules": "^4.5.11",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vueuse/core": "^8.7.5",
+    "@vueuse/core": "^8.9.0",
     "@wangeditor/editor": "^5.1.1",
     "@wangeditor/editor-for-vue": "^5.1.11",
     "animate.css": "^4.1.1",
@@ -43,7 +43,7 @@
     "reset-css": "^5.0.1",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.37",
-    "vue-echarts": "^6.1.0",
+    "vue-echarts": "^6.2.2",
     "vue-i18n": "^9.1.10",
     "vue-router": "^4.1.1",
     "vxe-table": "^4.2.3",
@@ -51,7 +51,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@iconify-json/mdi": "^1.1.24",
+    "@iconify-json/mdi": "^1.1.25",
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@types/lodash": "^4.14.182",
     "@types/mockjs": "^1.0.6",
@@ -76,12 +76,12 @@
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.9.2",
     "unplugin-icons": "^0.14.7",
-    "unplugin-vue-components": "^0.21.0",
+    "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.13",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0",
-    "vue-tsc": "^0.38.2"
+    "vue-tsc": "0.38.2"
   },
   "config": {
     "commitizen": {
