--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0",
-    "vue-tsc": "0.38.2"
+    "vue-tsc": "^0.38.3"
   },
   "config": {
     "commitizen": {
