feat: vite版本升级至3.0，锁定vite-vue插件版本

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install dependencies
-        run: npm install
+        run: npm install --force
       - name: Build
         run: npm run build
       - name: Deploy pages
