--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.6",
   "author": "cloudhao1999",
-  "description": "cloud-app-admin 使用了最新的vue3.2+ vite2+Element-Plus+TypeScript等主流技术开发，希望能和大家一起学习最新前端技术。",
+  "description": "cloud-app-admin 使用了最新的vue3.2+vite3+Element-Plus+TypeScript等主流技术开发，希望能和大家一起学习最新前端技术。",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
