--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@vee-validate/i18n": "^4.6.2",
     "@vee-validate/rules": "^4.6.2",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
-    "@vueuse/core": "^9.0.2",
+    "@vueuse/core": "^9.1.0",
     "@wangeditor/editor": "^5.1.14",
     "@wangeditor/editor-for-vue": "^5.1.11",
     "animate.css": "^4.1.1",
@@ -70,12 +70,12 @@
     "prettier": "^2.7.1",
     "rollup": "^2.77.2",
     "rollup-plugin-visualizer": "^5.7.1",
-    "sass": "^1.54.0",
+    "sass": "^1.54.3",
     "tailwindcss": "^3.1.7",
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.10.3",
     "unplugin-icons": "^0.14.8",
-    "unplugin-vue-components": "^0.21.2",
+    "unplugin-vue-components": "^0.22.0",
     "vite": "^3.0.4",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
@@ -94,8 +94,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   }
 }
