--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@element-plus/icons-vue": "^2.0.6",
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@vee-validate/i18n": "^4.6.2",
-    "@vee-validate/rules": "^4.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@vee-validate/i18n": "^4.6.4",
+    "@vee-validate/rules": "^4.6.4",
     "@vitejs/plugin-vue-jsx": "^2.0.0",
     "@vueuse/core": "^9.1.0",
     "@wangeditor/editor": "^5.1.14",
@@ -40,10 +40,10 @@
     "pinia": "^2.0.17",
     "qs": "^6.11.0",
     "reset-css": "^5.0.1",
-    "vee-validate": "^4.6.2",
+    "vee-validate": "^4.6.4",
     "vue": "^3.2.37",
     "vue-echarts": "^6.2.3",
-    "vue-i18n": "^9.2.0",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.3",
     "vxe-table": "^4.2.3",
     "xe-utils": "^3.5.6",
@@ -51,11 +51,11 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.29",
-    "@intlify/vite-plugin-vue-i18n": "^5.0.1",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.0",
     "@types/lodash": "^4.14.182",
     "@types/mockjs": "^1.0.6",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/parser": "^5.32.0",
+    "@typescript-eslint/parser": "^5.33.0",
     "@vitejs/plugin-vue": "^3.0.1",
     "autoprefixer": "^10.4.8",
     "commitizen": "^4.2.5",
@@ -66,21 +66,21 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "rollup": "^2.77.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.54.3",
-    "tailwindcss": "^3.1.7",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
-    "unplugin-auto-import": "^0.10.3",
+    "unplugin-auto-import": "^0.11.1",
     "unplugin-icons": "^0.14.8",
-    "unplugin-vue-components": "^0.22.0",
+    "unplugin-vue-components": "0.22.0",
     "vite": "^3.0.4",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
     "vite-plugin-style-import": "^2.0.0",
-    "vue-tsc": "^0.39.4"
+    "vue-tsc": "^0.39.5"
   },
   "config": {
     "commitizen": {
