--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.11.1",
     "unplugin-icons": "^0.14.8",
-    "unplugin-vue-components": "0.22.0",
+    "unplugin-vue-components": "^0.22.3",
     "vite": "^3.0.4",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.6",
