--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "rollup": "^2.77.3",
+    "rollup": "~2.77.3",
     "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8",
