--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "@types/js-cookie": "^3.0.2",
     "@types/qs": "^6.9.7",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@vee-validate/i18n": "^4.7.0",
     "@vee-validate/rules": "^4.7.0",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
@@ -28,7 +28,7 @@
     "@wangeditor/editor": "^5.1.21",
     "@wangeditor/editor-for-vue": "^5.1.11",
     "animate.css": "^4.1.1",
-    "axios": "^0.27.2",
+    "axios": "^1.1.2",
     "dayjs": "^1.11.5",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.17",
@@ -57,9 +57,9 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@types/lodash": "^4.14.186",
     "@types/mockjs": "^1.0.7",
-    "@types/node": "^18.8.3",
+    "@types/node": "18.8.3",
     "@types/nprogress": "^0.2.0",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/parser": "^5.40.0",
     "@vitejs/plugin-vue": "^3.1.2",
     "autoprefixer": "^10.4.12",
     "commitizen": "^4.2.5",
